# inspect-deps

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  main.cpp  pyproject.toml
completions/: _inspect-deps  inspect-deps.bash  inspect-deps.fish
inspect_deps/: main.py
