[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect-deps"
version = "0.1.2"
description = "ELF dependency analyzer for Arch Linux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
inspect-deps = "inspect_deps.main:main"

[dependency-groups]
dev = [
    "shtab>=1.8.0",
]
